tests/script_runtime_errors/function_error_3/error.txt
Error: 
    2 | core::string::format(a, "snot", "badger")
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Runtime error in function string::format/3: expected 1st parameter to format to be a format specifier e.g. to print a number use `string::format("{{}}", 1)`
